# os_dev_reorg

./: .gitignore  Makefile  TODO.md  gdbinit-qemu  linker.ld
docs/: README.MD  kernel_tools.txt
iso/boot/grub/: grub.cfg
rust/: Cargo.toml  building.sh  create_command.txt  prepare_no_std.sh
rust/crates/arch_x86/: Cargo.toml
rust/crates/drivers/src/: lib.rs
rust/crates/kernel/: Cargo.toml
rust/crates/kernel/.cargo/: config.toml
rust/crates/kernel/src/: drivers.rs  idt.rs  lib.rs  memory.rs  qemu.rs
rust/crates/kernel/src/datastructures/: linkedlist.rs
rust/crates/kernel/src/drivers/: serial.rs
rust/crates/kernel/src/idt/: makeidt.rs
rust/crates/kernel/src/io/: writer.rs
rust/crates/kernel/src/memory/: memory_parsing.rs  multiboot_helper.rs
rust/crates/kernel/src/printing/: print.rs
rust/crates/kernel/src/qemu/: qemu_testing.rs
rust/crates/kernel_core/: Cargo.toml
rust/crates/memory/src/: lib.rs
rust/crates/rust_support/: Cargo.toml  i686-os.json
rust/crates/rust_support/src/: lib.rs
rust/crates/tests/: Cargo.toml  all.txt
rust/crates/tests/src/: lib.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: main.rs
src/arch/x86/: gdt.c  gdt.h
src/boot/: boot.s  paging.s  practice.s  reload.s  setgdt.s
src/include/: idt.h  kernel_h.h  kinfo.h  multiboot.h  rust_import.h  typecheck.h
src/kernel/: kernel.c
src/lib/: str.c  str.h  utils.c  utils.h
src/mm/: kalloc.c  memlayout.h  paging.h  pmm.c  pmm.h  vm.c  vm.h
src/tests/: debug_exit.h  practice.h  test.h  test_pmm.h  testpmm.c
